# launcher

./: README.md  next.config.ts  package.json
src/: App.scss  App.tsx  Globals.css  Globals.scss  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mac-resources/: Assets.car  Berry Dash Launcher.icns
src-tauri/src/: keys.rs  lib.rs  main.rs
src/app/: GlobalProvider.tsx  Globals.css  Installs.css  layout.tsx  page.tsx
src/app/componets/: RandomBerry.tsx  Setting.css  Setting.tsx  Sidebar.css  Sidebar.tsx  VersionInfo.tsx
src/app/game/: page.tsx
src/app/leaderboards/: Leaderboards.css  page.tsx
src/app/settings/: page.tsx
src/app/types/: DownloadProgress.ts  DownloadedVersion.ts  Game.ts  GameVersion.ts  ServerVersionsResponse.ts  SettingProps.ts  SettingsProps.ts  SettingsType.ts  VersionsConfig.ts
src/app/util/: BazookaManager.ts  Encryption.ts  KeysHelper.ts
src/componets/: Setting.css  Setting.tsx  Sidebar.css  Sidebar.tsx
src/enums/: Keys.ts
src/routes/: Home.tsx  Installs.css  Installs.tsx  Leaderboards.css  Leaderboards.tsx  Settings.tsx
src/types/: DownloadProgress.ts  InstallsProps.ts  LauncherVersion.ts  LeaderboardEntry.ts  NormalConfig.ts  SettingProps.ts  SettingsType.ts  SidebarProps.ts  VersionsConfig.ts
src/util/: BazookaManager.ts  Encryption.ts  KeysHelper.ts
