[package]
name = "berry-dash-launcher"
version = "1.0.0"
authors = ["Lncvrt"]
edition = "2024"

[lib]
name = "berry_dash_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = [] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tauri-plugin-os = "2.3.0"
base64 = "0.22.1"
reqwest = { version = "0.12.22", features = ["stream"] }
tokio = "1.46.1"
futures-util = "0.3.31"
tauri-plugin-decorum = "1.1.1"
tauri-plugin-fs = "2"

