[package]
name = "berry-dash-launcher"
version = "1.0.0"
authors = ["Lncvrt"]
edition = "2024"

[lib]
name = "berry_dash_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
tauri-plugin-opener = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tauri-plugin-os = "2.3.0"
reqwest = { version = "0.12.22", default-features = false, features = ["stream", "rustls-tls"] }
tokio = "1.47.1"
futures-util = { version = "0.3.31", features = ["io"] }
tauri-plugin-decorum = "1.1.1"
tauri-plugin-fs = "2.4.1"
zip = "4.3.0"
libc = "0.2.174"
tauri-plugin-dialog = "2.3.2"
tauri-plugin-notification = "2.3.0"
sysinfo = "0.36.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.2"

