[package]
name = "berry-dash-launcher"
version = "1.1.0"
authors = ["Lncvrt"]
edition = "2024"

[lib]
name = "berry_dash_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.4", features = [] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tauri-plugin-os = "2.3.1"
reqwest = { version = "0.12.23", default-features = false, features = ["stream", "rustls-tls"] }
tokio = "1.47.1"
futures-util = { version = "0.3.31", features = ["io"] }
tauri-plugin-decorum = "1.1.1"
tauri-plugin-fs = "2.4.2"
zip = "4.5.0"
libc = "0.2.175"
tauri-plugin-dialog = "2.3.3"
tauri-plugin-notification = "2.3.1"
sysinfo = "0.37.0"

[target.'cfg(target_os = "linux")'.dependencies]
shlex = "1.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.3"


